Updated git starter code and YouTube link

--- a/docs/Assignments/git-md-bash.mdx
+++ b/docs/Assignments/git-md-bash.mdx
@@ -6,7 +6,7 @@ sidebar_position: 0
 
 ## Assignment Links
 
-- [Lecture 0: Developer Essentials](https://www.youtube.com/watch?v=SFsQxQYLyOo)
+- [Lecture 0: Developer Essentials](https://www.youtube.com/watch?v=qpJc6QMvbAY)
 
 ## Assignment Overview
 
@@ -116,4 +116,4 @@ history | tail -n 200 >> history.txt
 
 Then make sure that your initial `echo >> "Hello Bash!"` command is in this file. If not, try deleting the contents of the file and running the command again but with more lines. Commit and push the updated `history.txt` file to GitHub.
 
-Then, [clone the starter code](https://github.com/CS61D/Assignment-Starter-Git). The starer code repository has tests which will make sure that you used the command line for this assignment, and that you merged two pull requests on GitHub. All you need to do to run the tests is add the link to your repository to the `repo.txt` file.
+Then, [clone the starter code](https://github.com/Codify-Berkeley-Education/Assignment-Starter-Git/tree/f4225156701ba3c27c7216d1bee9c68cecc00aa8). The starer code repository has tests which will make sure that you used the command line for this assignment, and that you merged two pull requests on GitHub. All you need to do to run the tests is add the link to your repository to the `repo.txt` file.
