made other assignments links be N/A

--- a/docs/Assignments/git-md-bash.mdx
+++ b/docs/Assignments/git-md-bash.mdx
@@ -7,7 +7,7 @@ sidebar_position: 0
 ## Assignment Links
 
 - [Lecture 0: Developer Essentials](https://www.youtube.com/watch?v=qpJc6QMvbAY)
-- [Github Classroom Assignment](https://classroom.github.com/a/EC4ZhQzc)
+- [Github Classroom Assignment](https://classroom.github.com/a/YMUoUkc2)
 
 ## Assignment Overview
 
