finished updating website

--- a/docs/Assignments/git-md-bash.mdx
+++ b/docs/Assignments/git-md-bash.mdx
@@ -6,7 +6,7 @@ sidebar_position: 0
 
 ## Assignment Links
 
-- [Lecture 0: Developer Essentials](https://www.youtube.com/watch?v=qpJc6QMvbAY)
+- [Lecture 0 Playlist](https://www.youtube.com/playlist?list=PLKG9s9gYKALAH4hjio6Jbmn4IVt9VB117)
 - [Github Classroom Assignment](https://classroom.github.com/a/YMUoUkc2)
 
 ## Assignment Overview
