Added links in both assignments 0 and 1

--- a/docs/Assignments/git-md-bash.mdx
+++ b/docs/Assignments/git-md-bash.mdx
@@ -7,6 +7,8 @@ sidebar_position: 0
 ## Assignment Links
 
 - [Lecture 0 Playlist](https://www.youtube.com/playlist?list=PLKG9s9gYKALAH4hjio6Jbmn4IVt9VB117)
+- [Bash Reference](https://codify-berkeley-education.github.io/docs/Readings/bash)
+- [Git & Github Reference](https://codify-berkeley-education.github.io/docs/Readings/git)
 - [Github Classroom Assignment](https://classroom.github.com/a/YMUoUkc2)
 
 ## Assignment Overview
